--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <p>this is a test</p>
             </div>
             <div class="col">
-                <p>this is a test</p>
+                <p>this is a test 2</p>
             </div>
             
         </div>
