Fixed language in main page

--- a/index.html
+++ b/index.html
@@ -523,7 +523,7 @@
       // executes when complete page is fully loaded, including all frames, objects and images
       simplemaps_worldmap.load();
 
-      const userPreferredLanguage = localStorage.getItem('language') || 'en';
+      const userPreferredLanguage = localStorage.getItem('language') || 'pt';
       if (userPreferredLanguage == 'en') {
         var typed = new Typed('#typed-entry', {
           strings: ['Memories', 'Experiences', 'Travels', 'Adventures', 'Journeys', 'Achievements',
