--- a/events/serra-estrela.html
+++ b/events/serra-estrela.html
@@ -571,7 +571,7 @@
       </div>
     </div>
 
-    <div class="container portfolio-details">
+    <div class="container portfolio-details mb-5">
       <div class="row">
 
         <div class="col-lg-4">
