--- a/events/meia-maratona.html
+++ b/events/meia-maratona.html
@@ -2,6 +2,18 @@
 <html lang="en">
 
 <head>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TT3822KLT9"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+
+    function gtag() {
+      dataLayer.push(arguments);
+    }
+    gtag('js', new Date());
+
+    gtag('config', 'G-TT3822KLT9');
+  </script>
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
@@ -122,8 +134,9 @@
               <h2>Meia Maratona Leiria</h2>
               <p>
                 MEIA MARATONA LEIRIA é um evento de excelência, com dinâmicas que permitiram momentos fantásticos.
-Uma prova certificada e reconhecida internacionalmente pela World Athletics, um evento que para além de ser competitivo é um evento de emoções!
-                </p>
+                Uma prova certificada e reconhecida internacionalmente pela World Athletics, um evento que para além de
+                ser competitivo é um evento de emoções!
+              </p>
               </p>
             </div>
           </div>
@@ -134,7 +147,8 @@ Uma prova certificada e reconhecida internacionalmente pela World Athletics, um 
                 <div class="swiper-slide">
                   <div class="portfolio">
                     <div class="portfolio-wrap">
-                      <img src="../assets/img/portfolio/meia-maratona/2023-10-22.09.29.49.jpeg" class="img-fluid" alt="">
+                      <img src="../assets/img/portfolio/meia-maratona/2023-10-22.09.29.49.jpeg" class="img-fluid"
+                        alt="">
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/meia-maratona/2023-10-22.09.29.49.jpeg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2023-10-22.09.29.49"><i
@@ -147,7 +161,8 @@ Uma prova certificada e reconhecida internacionalmente pela World Athletics, um 
                 <div class="swiper-slide">
                   <div class="portfolio">
                     <div class="portfolio-wrap">
-                      <img src="../assets/img/portfolio/meia-maratona/2023-10-22.10.11.00.jpeg" class="img-fluid" alt="">
+                      <img src="../assets/img/portfolio/meia-maratona/2023-10-22.10.11.00.jpeg" class="img-fluid"
+                        alt="">
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/meia-maratona/2023-10-22.10.11.00.jpeg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2023-10-22.10.11.00"><i
@@ -160,7 +175,8 @@ Uma prova certificada e reconhecida internacionalmente pela World Athletics, um 
                 <div class="swiper-slide">
                   <div class="portfolio">
                     <div class="portfolio-wrap">
-                      <img src="../assets/img/portfolio/meia-maratona/2023-10-22.09.39.09.jpeg" class="img-fluid" alt="">
+                      <img src="../assets/img/portfolio/meia-maratona/2023-10-22.09.39.09.jpeg" class="img-fluid"
+                        alt="">
                       <div class="portfolio-links">
                         <a href="../assets/img/portfolio/meia-maratona/2023-10-22.09.39.09.jpeg"
                           data-gallery="portfolioGallery-2" class="portfolio-lightbox" title="2023-10-22.09.39.09"><i
@@ -175,7 +191,7 @@ Uma prova certificada e reconhecida internacionalmente pela World Athletics, um 
             </div>
           </div>
 
-         
+
         </div>
       </div>
 
@@ -187,7 +203,7 @@ Uma prova certificada e reconhecida internacionalmente pela World Athletics, um 
           <p>
             A minha primeira prova de 10K. Completada em 1 hora e 12 minutos.
           </p>
-          
+
         </div>
         <div class="col-lg-8">
           <section class="portfolio section-bg" style="padding: 0;">
@@ -196,8 +212,9 @@ Uma prova certificada e reconhecida internacionalmente pela World Athletics, um 
                 <div class="portfolio-wrap">
                   <img src="../assets/img/portfolio/meia-maratona/hes20231022048g04456-1.jpg" class="img-fluid" alt="">
                   <div class="portfolio-links">
-                    <a href="../assets/img/portfolio/meia-maratona/hes20231022048g04456-1.jpg" data-gallery="portfolioGallery"
-                      class="portfolio-lightbox" title="hes20231022048g04456-1"><i class="bx bx-plus"></i></a>
+                    <a href="../assets/img/portfolio/meia-maratona/hes20231022048g04456-1.jpg"
+                      data-gallery="portfolioGallery" class="portfolio-lightbox" title="hes20231022048g04456-1"><i
+                        class="bx bx-plus"></i></a>
                   </div>
                 </div>
               </div>
