--- a/events/meia-maratona.html
+++ b/events/meia-maratona.html
@@ -17,7 +17,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Portfolio Details</title>
+  <title>Portfolio Details - Meia Maratona</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
