--- a/index.html
+++ b/index.html
@@ -358,18 +358,18 @@
             </div>
           </div>
 
-          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/50-anos-25abril-Leiria/2024_04_25_0938.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
-                <a href="assets/img/portfolio/portfolio-8.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="Card 3"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="assets/img/portfolio/50-anos-25abril-Leiria/2024_04_25_0938.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="50 Anos 25 Abril - Leiria, 2024"><i class="bx bx-plus"></i></a>
+                <a href="events/50-anos-25abril-leiria.html" title="More Details"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-estrangeiro">
+          <!--<div class="col-lg-4 col-md-6 portfolio-item filter-estrangeiro">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
