--- a/events/50-anos-25abril-leiria.html
+++ b/events/50-anos-25abril-leiria.html
@@ -372,7 +372,7 @@
             <div class="row">
                 <div class="col-lg-4">
                     <p>
-                        Manifestação pelas ruas de Leiria marcou a tarde.
+                        Desfile pelas ruas de Leiria marcou a tarde.
                     </p>
 
                 </div>
