--- a/index.html
+++ b/index.html
@@ -400,7 +400,14 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="bi bi-briefcase"></i></div>
             <h4 class="title"><span data-i18n="photography"></span></h4>
-            <p class="description"><span data-i18n="hq_photos_taken"></span></p>
+            <p class="description"><span data-i18n="hq_photos_taken"></span>
+              
+              <ul>
+                <h6><b>Canon EOS M50 Mark II</b> </h6>
+                <li><small><i>EF-M 15-45mm f/3.5-6.3 IS STM</i></small></li>
+                <li><small><i>Sigma 56mm F1.4 DC DN Contemporary</i></small></li>
+              </ul>
+            </p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="bi bi-card-checklist"></i></div>
