World of Hans Zimmer

--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
                 <a href="assets/img/portfolio/corrida-adepto/1.JPG" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Corrida do Adepto (10K) - Jan 27, 2024"><i
                     class="bx bx-plus"></i></a>
-                <a href="events/corrida-adepto.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="events/corrida-adepto.html" title="Detalhes"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -306,7 +306,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/serra-estrela/2024_02_13_0583.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Serra da Estrela - Fev 13, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/serra-estrela.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="events/serra-estrela.html" title="Detalhes"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -318,7 +318,7 @@
                 <a href="assets/img/portfolio/meia-maratona/1.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Meia Maratona Leiria (10K) - Out 22, 2023"><i
                     class="bx bx-plus"></i></a>
-                <a href="events/meia-maratona.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="events/meia-maratona.html" title="Detalhes"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -353,7 +353,7 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/beja/2024_02_17_0609.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="Amêndoas em Flor/Beja Fev 18, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/beja.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="events/beja.html" title="Detalhes"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
@@ -364,7 +364,18 @@
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/50-anos-25abril-Leiria/2024_04_25_0938.jpg" data-gallery="portfolioGallery"
                   class="portfolio-lightbox" title="50 Anos 25 Abril - Leiria, 2024"><i class="bx bx-plus"></i></a>
-                <a href="events/50-anos-25abril-leiria.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="events/50-anos-25abril-leiria.html" title="Detalhes"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/world-hans-zimmer/2024_04_27_1005.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/world-hans-zimmer/2024_04_27_1005.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="The World of Hans Zimmer - Lisboa, 2024"><i class="bx bx-plus"></i></a>
+                <a href="events/world-of-hans-zimmer.html" title="Detalhes"><i class="bx bx-link"></i></a>
               </div>
             </div>
           </div>
