--- a/events/world-of-hans-zimmer.html
+++ b/events/world-of-hans-zimmer.html
@@ -123,7 +123,7 @@
             <div class="portfolio-info">
               <h3><span data-i18n="details"></span></h3>
               <ul>
-                <li><strong><span data-i18n="category"></span></strong>: <span data-i18n="sports"></span></li>
+                <li><strong><span data-i18n="category"></span></strong>: <span data-i18n="national"></span></li>
                 <li><strong><span data-i18n="event"></span></strong>: The World of Hans Zimmer</li>
                 <li><strong><span data-i18n="date"></span></strong>: 27 Abr, 2024</li>
                 <li><strong>Website:</strong> <a href="https://www.worldofhanszimmer.com/"
