--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
               <img src="assets/img/portfolio/world-hans-zimmer/2024_04_27_1005.jpg" class="img-fluid" alt="">
               <div class="portfolio-links">
                 <a href="assets/img/portfolio/world-hans-zimmer/2024_04_27_1005.jpg" data-gallery="portfolioGallery"
-                  class="portfolio-lightbox" title="The World of Hans Zimmer - Lisboa, 2024"><i class="bx bx-plus"></i></a>
+                  class="portfolio-lightbox" title="The World of Hans Zimmer - Abr 27, 2024"><i class="bx bx-plus"></i></a>
                 <a href="events/world-of-hans-zimmer.html" title="Detalhes"><i class="bx bx-link"></i></a>
               </div>
             </div>
