--- a/events/world-of-hans-zimmer.html
+++ b/events/world-of-hans-zimmer.html
@@ -494,7 +494,7 @@
               <div class="swiper-pagination"></div>
             </div>
           </div>
-
+          <p><i>Viagem com Reserva D'Emoções</i></p>
         </div>
       </div>
 
