--- a/index.html
+++ b/index.html
@@ -380,6 +380,17 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nacional">
+            <div class="portfolio-wrap">
+              <img src="assets/img/portfolio/fatima-12-maio/2024_05_12_1822.jpg" class="img-fluid" alt="">
+              <div class="portfolio-links">
+                <a href="assets/img/portfolio/fatima-12-maio/2024_05_12_1822.jpg" data-gallery="portfolioGallery"
+                  class="portfolio-lightbox" title="12 Maio em Fátima - Mai 12, 2024"><i class="bx bx-plus"></i></a>
+                <a href="events/fatima-12-maio.html" title="Detalhes"><i class="bx bx-link"></i></a>
+              </div>
+            </div>
+          </div>
+
           <!--<div class="col-lg-4 col-md-6 portfolio-item filter-estrangeiro">
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
